# pucksmart-py

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
nhlapi/: game.py  league.py  schedule.py
pucksmart/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
stats/: admin.py  models.py  tasks.py
stats/migrations/: 0001_initial.py  0002_season.py  0003_alter_season_preseason_start_date.py  0004_game_away_team_game_home_team_alter_game_season.py  0005_faceoff_shot.py  0006_shift.py  0007_alter_team_franchise.py
warehouse/: models.py  tasks.py
warehouse/migrations/: 0001_initial.py  0002_alter_httpsource_e_tag.py  0003_nhlplayer.py  0004_alter_nhlplayer_birth_region.py  0005_alter_nhlplayer_handedness.py
warehouse/nhlapi/: game.py  league.py  schedule.py
