[project]
name = "pucksmart"
version = "0.1"
dependencies = [
    "django==5.0.*",
    "djangorestframework",
    "django-celery-results",
    "celery",
    "celery[redis]",
    "markdown",
    "requests",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "boto3",
]

[tool.setuptools]
packages = [
    "nhlapi",
    "pucksmart",
    "stats",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]

[tool.isort]
profile = "black"