[project]
name = "pucksmart"
version = "0.1"
dependencies = [
    "django==5.0.*",
    "djangorestframework",
    "psycopg[binary]>=3.1.8",
    "django-celery-results",
    "celery",
    "celery[redis]",
    "markdown",
    "requests",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "boto3",
]

[tool.setuptools]
packages = [
    "pucksmart",
    "stats",
    "warehouse",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]

[tool.isort]
profile = "black"