[tool.poetry]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.*"
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = ">=3.1.8"}
django-celery-results = "^2.5.1"
celery = {extras = ["redis"], version = "^5.3.6"}
Markdown = "^3.6"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
boto3 = "^1.34.75"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"